--- a/android-developer.html
+++ b/android-developer.html
@@ -61,7 +61,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -101,11 +101,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://transfergo.workable.com/j/6B82E80C3F'>TransferGo - Jobs: Android Developer - Apply online</a></h5> 
+<h5><a href='https://transfergo.workable.com/j/6B82E80C3F'>TransferGo - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -161,7 +161,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/2722c5d0-b520-4edd-a543-622037745115'>Research Innovations - Android Applications Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/researchinnovations.com/2722c5d0-b520-4edd-a543-622037745115'>Research Innovations - Android Applications Developer</a></h5> 
 <p><span class="badge badge-light">Austin, TX Melbourne</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -185,7 +185,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/f7b2c585-82a1-412c-87ef-265ce5138ef7'>vpTech - Android Developer H/F</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/f7b2c585-82a1-412c-87ef-265ce5138ef7'>vpTech - Android Developer H/F</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -225,7 +225,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lagash/d73314a3-1510-429b-8fa2-64c9d2f0b826'>Lagash - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lagash/d73314a3-1510-429b-8fa2-64c9d2f0b826'>Lagash - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Hace 3 d?as ... Android Developer. Buenos Aires. Operations ? Developers. Full time. Apply for 
 this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...</p>
@@ -306,7 +306,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
     Android Developer at SignEasy
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -397,11 +397,11 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://and-digital.workable.com/j/9A17E84104'>AND Digital - Jobs: Senior Android Developer (Leeds) - Apply online</a></h5> 
+<h5><a href='https://and-digital.workable.com/j/9A17E84104'>AND Digital - Jobs: Senior Android Developer (Leeds) - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999690987897-android-developer'>Greppy Systems Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999690987897-android-developer'>Greppy Systems Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
